[package]
name = "index_many"
version = "0.6.0"
authors = ["Marvin Löbel <loebel.marvin@gmail.com>"]
edition = "2018"

license = "MIT/Apache-2.0"

description = "A proof of concept for indexing an slice at multiple locations at once"
readme = "README.md"
documentation = "https://docs.rs/index_many/"

repository = "https://github.com/Kimundi/index_many"
keywords = ["slice", "array", "index"]
exclude = [
    "etc"
]
[dependencies]

[workspace]
members = ["codegen_test", "make_codegen"]
